<resources>
    <string name="app_name">ControlWS2</string>
    <!-- CRUD -->
    <string name="ingresar_nota">Ingresar Nota</string>
    <string name="actualizar_nota">Actualizar Nota</string>
    <string name="consultar_nota">Consultar Nota</string>
    <string name="eliminar_nota">Eliminar Nota</string>

    <!-- OTRAS OPCIONES -->
    <string name="promedio_alumno">Promedio de Alumno</string>
    <string name="sum_alumno">Sumatoria de Notas por Alumno</string>
    <string name="min_alumno">Nota Minima de Alumno</string>
    <string name="max_alumno">Nota Maxima de Alumno</string>
    <string name="count_alumno">Conteo de Alumno</string>
    <string name="actualizar_materia">Actualizar Materias</string>

    <!-- DATOS -->
    <string name="title_activity_materia">MateriaActivity</string>
    <string name="title_activity_promedio_alumno">PromedioAlumnoActivity</string>
    <string name="title_activity_ingresar_nota">IngresarNotaActivity</string>
    <string name="indicacion_materia">A partir de que fecha desea actualizar?</string>
    <string name="formato_fecha">dd/mm/aaaa</string>
    <string name="servicio_PHPlocal">Servicio PHP Local</string>
    <string name="guardar">Guardar</string>
    <string name="carnet">Carnet</string>
    <string name="cod_materia">Codigo Materia</string>
    <string name="ciclo">Ciclo</string>
    <string name="nota_final">Nota Final</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_actualizar_alumno">ActualizarAlumnoActivity</string>
    <string name="title_activity_actualizar_materia">ActualizarMateriaActivity</string>
</resources>
