<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarNotaActivity"
    android:orientation="vertical"
    android:id="@+id/LinearLayout5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView03"
            android:text="@string/carnet" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_alumnoCarnet"
            android:ems="10">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/TextView02"
            android:text="@string/cod_materia"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/editText_notaMateria"
            android:ems="10"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/TextView01"
            android:text="@string/ciclo"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/editText_notaCiclo"
            android:ems="10"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:text="@string/servicio_PHPlocal"
            android:onClick="eliminarNota"
            />

</LinearLayout>