<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarNotaActivity"
    android:orientation="vertical"
    android:id="@+id/LinearLayout4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView03"
            android:text="@string/carnet"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_alumnoCarnet"
            android:layout_weight="1"
            android:ems="10">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/TextView02"
            android:text="@string/cod_materia"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/editText_notaMateria"
            android:ems="10"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/TextView01"
            android:text="@string/ciclo"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/editText_notaCiclo"
            android:ems="10"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:text="@string/servicio_PHPlocal"
            android:onClick="consultarNota"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_alumnoNota"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0.08" />

</LinearLayout>